--- a/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.vcxproj
@@ -140,6 +140,15 @@
     <ClCompile Include="..\..\..\..\test\main.cpp" />
     <ClCompile Include="..\..\..\..\test\message.cpp" />
     <ClCompile Include="..\..\..\..\test\message\address.cpp" />
+    <ClCompile Include="..\..\..\..\test\message\alert.cpp" />
+    <ClCompile Include="..\..\..\..\test\message\alert_formatted_payload.cpp" />
+    <ClCompile Include="..\..\..\..\test\message\filter_add.cpp" />
+    <ClCompile Include="..\..\..\..\test\message\filter_clear.cpp" />
+    <ClCompile Include="..\..\..\..\test\message\filter_load.cpp" />
+    <ClCompile Include="..\..\..\..\test\message\get_headers.cpp" />
+    <ClCompile Include="..\..\..\..\test\message\memory_pool.cpp" />
+    <ClCompile Include="..\..\..\..\test\message\merkle_block.cpp" />
+    <ClCompile Include="..\..\..\..\test\message\reject.cpp" />
     <ClCompile Include="..\..\..\..\test\message\version.cpp" />
     <ClCompile Include="..\..\..\..\test\message\get_address.cpp" />
     <ClCompile Include="..\..\..\..\test\message\get_blocks.cpp" />
