--- a/Makefile.am
+++ b/Makefile.am
@@ -115,8 +115,6 @@ src_libbitcoin_la_SOURCES = \
     src/message/version.cpp \
     src/network/acceptor.cpp \
     src/network/channel.cpp \
-    src/network/channel_proxy.cpp \
-    src/network/channel_stream_loader.cpp \
     src/network/connector.cpp \
     src/network/hosts.cpp \
     src/network/initiator.cpp \
@@ -126,7 +124,9 @@ src_libbitcoin_la_SOURCES = \
     src/network/protocol_ping.cpp \
     src/network/protocol_seed.cpp \
     src/network/protocol_version.cpp \
+    src/network/proxy.cpp \
     src/network/seeder.cpp \
+    src/network/stream_loader.cpp \
     src/network/timeout.cpp \
     src/unicode/console_streambuf.cpp \
     src/unicode/ifstream.cpp \
@@ -371,21 +371,21 @@ include_bitcoin_bitcoin_network_HEADERS = \
     include/bitcoin/bitcoin/network/acceptor.hpp \
     include/bitcoin/bitcoin/network/asio.hpp \
     include/bitcoin/bitcoin/network/channel.hpp \
-    include/bitcoin/bitcoin/network/channel_loader_module.hpp \
-    include/bitcoin/bitcoin/network/channel_proxy.hpp \
-    include/bitcoin/bitcoin/network/channel_stream_loader.hpp \
     include/bitcoin/bitcoin/network/connector.hpp \
     include/bitcoin/bitcoin/network/hosts.hpp \
     include/bitcoin/bitcoin/network/initiator.hpp \
+    include/bitcoin/bitcoin/network/loader.hpp \
     include/bitcoin/bitcoin/network/protocol.hpp \
     include/bitcoin/bitcoin/network/protocol_address.hpp \
     include/bitcoin/bitcoin/network/protocol_base.hpp \
     include/bitcoin/bitcoin/network/protocol_ping.hpp \
     include/bitcoin/bitcoin/network/protocol_seed.hpp \
     include/bitcoin/bitcoin/network/protocol_version.hpp \
+    include/bitcoin/bitcoin/network/proxy.hpp \
     include/bitcoin/bitcoin/network/seeder.hpp \
     include/bitcoin/bitcoin/network/settings.hpp \
     include/bitcoin/bitcoin/network/shared_const_buffer.hpp \
+    include/bitcoin/bitcoin/network/stream_loader.hpp \
     include/bitcoin/bitcoin/network/timeout.hpp
 
 include_bitcoin_bitcoin_unicodedir = ${includedir}/bitcoin/bitcoin/unicode
