--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
@@ -139,8 +139,8 @@
     <ClCompile Include="..\..\..\..\src\message\verack.cpp" />
     <ClCompile Include="..\..\..\..\src\network\acceptor.cpp" />
     <ClCompile Include="..\..\..\..\src\network\channel.cpp" />
-    <ClCompile Include="..\..\..\..\src\network\channel_proxy.cpp" />
-    <ClCompile Include="..\..\..\..\src\network\channel_stream_loader.cpp" />
+    <ClCompile Include="..\..\..\..\src\network\proxy.cpp" />
+    <ClCompile Include="..\..\..\..\src\network\stream_loader.cpp" />
     <ClCompile Include="..\..\..\..\src\network\connector.cpp" />
     <ClCompile Include="..\..\..\..\src\network\protocol_base.cpp" />
     <ClCompile Include="..\..\..\..\src\network\protocol_seed.cpp" />
@@ -249,9 +249,9 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\acceptor.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\asio.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\channel.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\channel_loader_module.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\channel_proxy.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\channel_stream_loader.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\loader.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\proxy.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\stream_loader.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\connector.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\protocol_base.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\protocol_seed.hpp" />
