--- a/Makefile.am
+++ b/Makefile.am
@@ -120,7 +120,6 @@ src_libbitcoin_la_SOURCES = \
     src/network/initiator.cpp \
     src/network/protocol.cpp \
     src/network/protocol_address.cpp \
-    src/network/protocol_base.cpp \
     src/network/protocol_ping.cpp \
     src/network/protocol_seed.cpp \
     src/network/protocol_version.cpp \
@@ -315,6 +314,10 @@ include_bitcoin_bitcoin_formats_HEADERS = \
 include_bitcoin_bitcoin_impl_formatsdir = ${includedir}/bitcoin/bitcoin/impl/formats
 include_bitcoin_bitcoin_impl_formats_HEADERS = \
     include/bitcoin/bitcoin/impl/formats/base16.ipp
+
+include_bitcoin_bitcoin_impl_networkdir = ${includedir}/bitcoin/bitcoin/impl/network
+include_bitcoin_bitcoin_impl_network_HEADERS = \
+    include/bitcoin/bitcoin/impl/network/protocol_base.ipp
 
 include_bitcoin_bitcoin_impl_utilitydir = ${includedir}/bitcoin/bitcoin/impl/utility
 include_bitcoin_bitcoin_impl_utility_HEADERS = \
