--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj.filters
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj.filters
@@ -84,9 +84,6 @@
     <Filter Include="src\message">
       <UniqueIdentifier>{919f9823-945e-4ab1-82ab-2c7ba85502ed}</UniqueIdentifier>
     </Filter>
-    <Filter Include="include\bitcoin\impl\network">
-      <UniqueIdentifier>{f7b2c9aa-1a03-4f6b-a5a4-33db1aad4072}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -119,9 +116,6 @@
     </None>
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\utility\ostream_writer.ipp">
       <Filter>include\bitcoin\impl\utility</Filter>
-    </None>
-    <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\network\protocol_base.ipp">
-      <Filter>include\bitcoin\impl\network</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -460,6 +454,9 @@
     </ClCompile>
     <ClCompile Include="..\..\..\..\src\message\heading.cpp">
       <Filter>src\message</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\src\network\protocol_base_base.cpp">
+      <Filter>src\network</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -885,6 +882,9 @@
     </ClInclude>
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\chain\header.hpp">
       <Filter>include\bitcoin\chain</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\protocol_base_base.hpp">
+      <Filter>include\bitcoin\network</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
