--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
@@ -332,6 +332,7 @@
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\formats\base16.ipp" />
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\formats\base58.ipp" />
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\math\checksum.ipp" />
+    <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\math\hash.ipp" />
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\utility\array_slice.ipp" />
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\utility\collection.ipp" />
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\utility\data.ipp" />
